--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=\, initial-scale=1.0" />
-    <title>Document</title>
+    <title>WebstudioPage</title>
   </head>
+
   <body>
-    <header></header>
+    <header>
+      <a href="#"> <span>Web</span><span>Studio</span> </a>
+      <nav>
+        <a href="#"> target="_blank">Studio </a>
+        <a href="#"> target="_blank">Portfolio </a>
+        <a href="#"> target="_blank"Contacts </a>
+      </nav>
+    </header>
   </body>
 </html>
