--- a/index.html
+++ b/index.html
@@ -24,61 +24,51 @@
       <h1>Effective Solutions for Your Business</h1>
       <button type="button">Order Service</button>
 
-      <container>
-        <h3>Strategy</h3>
-        <p>
-          Our goal is to identify the business problem to walk away with the
-          perfect and creative solution.
-        </p>
-      </container>
+      <h3>Strategy</h3>
+      <p>
+        Our goal is to identify the business problem to walk away with the
+        perfect and creative solution.
+      </p>
 
-      <container>
-        <h3>Punctuality</h3>
-        <p>
-          Bring the key message to the brand's audience for the best price
-          within the shortest possible time.
-        </p>
-      </container>
+      <h3>Punctuality</h3>
+      <p>
+        Bring the key message to the brand's audience for the best price within
+        the shortest possible time.
+      </p>
 
-      <container>
-        <h3>Diligence</h3>
-        <p>
-          Research and confirm brands that present the strongest digital growth
-          opportunities and minimize risk.
-        </p>
-      </container>
+      <h3>Diligence</h3>
+      <p>
+        Research and confirm brands that present the strongest digital growth
+        opportunities and minimize risk.
+      </p>
 
-      <container>
-        <h3>Technologies</h3>
-        <p>
-          Design practice focused on digital experiences. We bring forth a deep
-          passion for problem-solving.
-        </p>
-      </container>
+      <h3>Technologies</h3>
+      <p>
+        Design practice focused on digital experiences. We bring forth a deep
+        passion for problem-solving.
+      </p>
 
-      <container>
-        <h2>Our Team</h2>
+      <h2>Our Team</h2>
 
-        <img src="images/Mark Guerrero.jpg" alt="Mark Guerrero" width: 264px;
-        height: 260px; />
-        <h3>Mark Guerrero</h3>
-        <p>Product Designer</p>
+      <img src="images/Mark Guerrero.jpg" alt="Mark Guerrero" width: 264px;
+      height: 260px; />
+      <h3>Mark Guerrero</h3>
+      <p>Product Designer</p>
 
-        <img src="images/Tom Ford.jpg" alt="Tom Ford" width: 264px; height:
-        260px; />
-        <h3>Tom Ford</h3>
-        <p>Frontend Developer</p>
+      <img src="images/Tom Ford.jpg" alt="Tom Ford" width: 264px; height: 260px;
+      />
+      <h3>Tom Ford</h3>
+      <p>Frontend Developer</p>
 
-        <img src="images/Camila Garcia.jpg" alt="Camila Garcia" width: 264px;
-        height: 260px; />
-        <h3>Camila Garcia</h3>
-        <p>Marketing</p>
+      <img src="images/Camila Garcia.jpg" alt="Camila Garcia" width: 264px;
+      height: 260px; />
+      <h3>Camila Garcia</h3>
+      <p>Marketing</p>
 
-        <img src="images/Daniel Wilson.jpg" alt="Daniel Wilson" width: 264px;
-        height: 260px; />
-        <h3>Daniel Wilson</h3>
-        <p>UI Designer</p>
-      </container>
+      <img src="images/Daniel Wilson.jpg" alt="Daniel Wilson" width: 264px;
+      height: 260px; />
+      <h3>Daniel Wilson</h3>
+      <p>UI Designer</p>
     </main>
 
     <footer>
