--- a/index.html
+++ b/index.html
@@ -50,23 +50,19 @@
 
       <h2>Our Team</h2>
 
-      <img src="images/Mark Guerrero.jpg" alt="Mark Guerrero" width: 264px;
-      height: 260px; />
+      <img src="images/Mark Guerrero.jpg" alt="Mark Guerrero" width:264; />
       <h3>Mark Guerrero</h3>
       <p>Product Designer</p>
 
-      <img src="images/Tom Ford.jpg" alt="Tom Ford" width: 264px; height: 260px;
-      />
+      <img src="images/Tom Ford.jpg" alt="Tom Ford" width: 264px; />
       <h3>Tom Ford</h3>
       <p>Frontend Developer</p>
 
-      <img src="images/Camila Garcia.jpg" alt="Camila Garcia" width: 264px;
-      height: 260px; />
+      <img src="images/Camila Garcia.jpg" alt="Camila Garcia" width:264; />
       <h3>Camila Garcia</h3>
       <p>Marketing</p>
 
-      <img src="images/Daniel Wilson.jpg" alt="Daniel Wilson" width: 264px;
-      height: 260px; />
+      <img src="images/Daniel Wilson.jpg" alt="Daniel Wilson" width:264; />
       <h3>Daniel Wilson</h3>
       <p>UI Designer</p>
     </main>
