--- a/index.html
+++ b/index.html
@@ -8,22 +8,39 @@
 
   <body>
     <header>
-      <a href="#"> <span>Web</span><span>Studio</span> </a>
       <nav>
-        <a href="#" target="_blank"> Studio </a>
-        <a href="#" target="_blank">Portfolio </a>
-        <a href="#" target="_blank">Contacts </a>
+        <a href="./index.html" WebStudio> </a>
+        <ul>
+          <li>
+        <a href=""> Studio </a>
+        </li>
+        <li>
+        <a href="">Portfolio </a>
+        </li>
+        <li>
+        <a href="">Contacts </a>
+        </li>
+        </ul>
       </nav>
       <address>
+        <ul>
+          <li>
         <a href="maito:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li>
         <a href="tel:+11(000)1111111">+11 (000) 111-11-11</a>
+        </li>
       </address>
+      </ul>
     </header>
 
     <main>
+      <section>
       <h1>Effective Solutions for Your Business</h1>
       <button type="button">Order Service</button>
+</section>
 
+<h2>Section2</h2>
       <h3>Strategy</h3>
       <p>
         Our goal is to identify the business problem to walk away with the
@@ -48,30 +65,42 @@
         passion for problem-solving.
       </p>
 
+      <section>
       <h2>Our Team</h2>
 
-      <img src="images/Mark Guerrero.jpg" alt="Mark Guerrero" />
+<ul>
+  <li>
+      <img src="images/Mark Guerrero.jpg" alt="Mark Guerrero" width="264" />
       <h3>Mark Guerrero</h3>
       <p>Product Designer</p>
+      </li>
 
-      <img src="images/Tom Ford.jpg" alt="Tom Ford" />
+<li>
+      <img src="images/Tom Ford.jpg" alt="Tom Ford" width="264" />
       <h3>Tom Ford</h3>
       <p>Frontend Developer</p>
+      </li>
 
-      <img src="images/Camila Garcia.jpg" alt="Camila Garcia" />
+      <li>
+      <img src="images/Camila Garcia.jpg" alt="Camila Garcia" width="264" />
       <h3>Camila Garcia</h3>
       <p>Marketing</p>
+      </li>
 
-      <img src="images/Daniel Wilson.jpg" alt="Daniel Wilson" />
+      <li>
+      <img src="images/Daniel Wilson.jpg" alt="Daniel Wilson" width="264" />
       <h3>Daniel Wilson</h3>
       <p>UI Designer</p>
+      </li>
+      </ul>
+      </section>
     </main>
 
     <footer>
-      <a href="#"> <span>Web</span><span>Studio</span> </a>
+      <a href="./index.html"WebStudio> </a>
       <p>
-        Increase the flow of customers and <br />
-        sales for your business with digital <br />
+        Increase the flow of customers and 
+        sales for your business with digital 
         marketing &amp; growth solutions.
       </p>
     </footer>
