--- a/index.html
+++ b/index.html
@@ -70,25 +70,25 @@
 
 <ul>
   <li>
-      <img src="images/Mark Guerrero.jpg" alt="Mark Guerrero" width="264" />
+      <img src="images/MarkGuerrero.jpg" alt="Mark Guerrero" width="264" />
       <h3>Mark Guerrero</h3>
       <p>Product Designer</p>
       </li>
 
 <li>
-      <img src="images/Tom Ford.jpg" alt="Tom Ford" width="264" />
+      <img src="images/TomFord.jpg" alt="Tom Ford" width="264" />
       <h3>Tom Ford</h3>
       <p>Frontend Developer</p>
       </li>
 
       <li>
-      <img src="images/Camila Garcia.jpg" alt="Camila Garcia" width="264" />
+      <img src="images/CamilaGarcia.jpg" alt="Camila Garcia" width="264" />
       <h3>Camila Garcia</h3>
       <p>Marketing</p>
       </li>
 
       <li>
-      <img src="images/Daniel Wilson.jpg" alt="Daniel Wilson" width="264" />
+      <img src="images/DanielWilson.jpg" alt="Daniel Wilson" width="264" />
       <h3>Daniel Wilson</h3>
       <p>UI Designer</p>
       </li>
