--- a/index.html
+++ b/index.html
@@ -12,35 +12,35 @@
         <a href="./index.html" WebStudio> </a>
         <ul>
           <li>
-        <a href=""> Studio </a>
-        </li>
-        <li>
-        <a href="">Portfolio </a>
-        </li>
-        <li>
-        <a href="">Contacts </a>
-        </li>
+            <a href=""> Studio </a>
+          </li>
+          <li>
+            <a href="">Portfolio </a>
+          </li>
+          <li>
+            <a href="">Contacts </a>
+          </li>
         </ul>
       </nav>
       <address>
         <ul>
           <li>
-        <a href="maito:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li>
-        <a href="tel:+11(000)1111111">+11 (000) 111-11-11</a>
-        </li>
+            <a href="maito:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+11(000)1111111">+11 (000) 111-11-11</a>
+          </li>
+        </ul>
       </address>
-      </ul>
     </header>
 
     <main>
       <section>
-      <h1>Effective Solutions for Your Business</h1>
-      <button type="button">Order Service</button>
-</section>
+        <h1>Effective Solutions for Your Business</h1>
+        <button type="button">Order Service</button>
+      </section>
 
-<h2>Section2</h2>
+      <h2>Section2</h2>
       <h3>Strategy</h3>
       <p>
         Our goal is to identify the business problem to walk away with the
@@ -66,41 +66,52 @@
       </p>
 
       <section>
-      <h2>Our Team</h2>
+        <h2>Our Team</h2>
 
-<ul>
-  <li>
-      <img src="images/MarkGuerrero.jpg" alt="Mark Guerrero" width="264" />
-      <h3>Mark Guerrero</h3>
-      <p>Product Designer</p>
-      </li>
+        <ul>
+          <li>
+            <img
+              src="images/MarkGuerrero.jpg"
+              alt="Mark Guerrero"
+              width="264"
+            />
+            <h3>Mark Guerrero</h3>
+            <p>Product Designer</p>
+          </li>
 
-<li>
-      <img src="images/TomFord.jpg" alt="Tom Ford" width="264" />
-      <h3>Tom Ford</h3>
-      <p>Frontend Developer</p>
-      </li>
+          <li>
+            <img src="images/TomFord.jpg" alt="Tom Ford" width="264" />
+            <h3>Tom Ford</h3>
+            <p>Frontend Developer</p>
+          </li>
 
-      <li>
-      <img src="images/CamilaGarcia.jpg" alt="Camila Garcia" width="264" />
-      <h3>Camila Garcia</h3>
-      <p>Marketing</p>
-      </li>
+          <li>
+            <img
+              src="images/CamilaGarcia.jpg"
+              alt="Camila Garcia"
+              width="264"
+            />
+            <h3>Camila Garcia</h3>
+            <p>Marketing</p>
+          </li>
 
-      <li>
-      <img src="images/DanielWilson.jpg" alt="Daniel Wilson" width="264" />
-      <h3>Daniel Wilson</h3>
-      <p>UI Designer</p>
-      </li>
-      </ul>
+          <li>
+            <img
+              src="images/DanielWilson.jpg"
+              alt="Daniel Wilson"
+              width="264"
+            />
+            <h3>Daniel Wilson</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
       </section>
     </main>
 
     <footer>
-      <a href="./index.html"WebStudio> </a>
+      <a href="./index.html" WebStudio> </a>
       <p>
-        Increase the flow of customers and 
-        sales for your business with digital 
+        Increase the flow of customers and sales for your business with digital
         marketing &amp; growth solutions.
       </p>
     </footer>
