--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <nav>
-        <a href="./index.html" WebStudio> </a>
+        <a href="./index.html"> WebStudio</a>
         <ul>
           <li>
             <a href=""> Studio </a>
@@ -109,7 +109,7 @@
     </main>
 
     <footer>
-      <a href="./index.html" WebStudio> </a>
+      <a href="./index.html"> WebStudio </a>
       <p>
         Increase the flow of customers and sales for your business with digital
         marketing &amp; growth solutions.
