--- a/index.html
+++ b/index.html
@@ -40,30 +40,32 @@
         <button type="button">Order Service</button>
       </section>
 
-      <h2>Section2</h2>
-      <h3>Strategy</h3>
-      <p>
-        Our goal is to identify the business problem to walk away with the
-        perfect and creative solution.
-      </p>
+      <section>
+        <h2>Section2</h2>
+        <h3>Strategy</h3>
+        <p>
+          Our goal is to identify the business problem to walk away with the
+          perfect and creative solution.
+        </p>
 
-      <h3>Punctuality</h3>
-      <p>
-        Bring the key message to the brand's audience for the best price within
-        the shortest possible time.
-      </p>
+        <h3>Punctuality</h3>
+        <p>
+          Bring the key message to the brand's audience for the best price
+          within the shortest possible time.
+        </p>
 
-      <h3>Diligence</h3>
-      <p>
-        Research and confirm brands that present the strongest digital growth
-        opportunities and minimize risk.
-      </p>
+        <h3>Diligence</h3>
+        <p>
+          Research and confirm brands that present the strongest digital growth
+          opportunities and minimize risk.
+        </p>
 
-      <h3>Technologies</h3>
-      <p>
-        Design practice focused on digital experiences. We bring forth a deep
-        passion for problem-solving.
-      </p>
+        <h3>Technologies</h3>
+        <p>
+          Design practice focused on digital experiences. We bring forth a deep
+          passion for problem-solving.
+        </p>
+      </section>
 
       <section>
         <h2>Our Team</h2>
