--- a/index.html
+++ b/index.html
@@ -42,29 +42,39 @@
 
       <section>
         <h2>Section2</h2>
-        <h3>Strategy</h3>
-        <p>
-          Our goal is to identify the business problem to walk away with the
-          perfect and creative solution.
-        </p>
+        <ul>
+          <li>
+            <h3>Strategy</h3>
+            <p>
+              Our goal is to identify the business problem to walk away with the
+              perfect and creative solution.
+            </p>
+          </li>
 
-        <h3>Punctuality</h3>
-        <p>
-          Bring the key message to the brand's audience for the best price
-          within the shortest possible time.
-        </p>
+          <li>
+            <h3>Punctuality</h3>
+            <p>
+              Bring the key message to the brand's audience for the best price
+              within the shortest possible time.
+            </p>
+          </li>
 
-        <h3>Diligence</h3>
-        <p>
-          Research and confirm brands that present the strongest digital growth
-          opportunities and minimize risk.
-        </p>
+          <li>
+            <h3>Diligence</h3>
+            <p>
+              Research and confirm brands that present the strongest digital
+              growth opportunities and minimize risk.
+            </p>
+          </li>
 
-        <h3>Technologies</h3>
-        <p>
-          Design practice focused on digital experiences. We bring forth a deep
-          passion for problem-solving.
-        </p>
+          <li>
+            <h3>Technologies</h3>
+            <p>
+              Design practice focused on digital experiences. We bring forth a
+              deep passion for problem-solving.
+            </p>
+          </li>
+        </ul>
       </section>
 
       <section>
@@ -73,7 +83,7 @@
         <ul>
           <li>
             <img
-              src="images/MarkGuerrero.jpg"
+              src="./images/MarkGuerrero.jpg"
               alt="Mark Guerrero"
               width="264"
             />
@@ -82,14 +92,14 @@
           </li>
 
           <li>
-            <img src="images/TomFord.jpg" alt="Tom Ford" width="264" />
+            <img src="./images/TomFord.jpg" alt="Tom Ford" width="264" />
             <h3>Tom Ford</h3>
             <p>Frontend Developer</p>
           </li>
 
           <li>
             <img
-              src="images/CamilaGarcia.jpg"
+              src="./images/CamilaGarcia.jpg"
               alt="Camila Garcia"
               width="264"
             />
@@ -99,7 +109,7 @@
 
           <li>
             <img
-              src="images/DanielWilson.jpg"
+              src="./images/DanielWilson.jpg"
               alt="Daniel Wilson"
               width="264"
             />
