--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
       <address>
         <ul>
           <li>
-            <a href="maito:info@devstudio.com">info@devstudio.com</a>
+            <a href="mailto:info@devstudio.com"> info@devstudio.com</a>
           </li>
           <li>
-            <a href="tel:+11(000)1111111">+11 (000) 111-11-11</a>
+            <a href="tel:+11(000)1111111"> +11 (000) 111-11-11</a>
           </li>
         </ul>
       </address>
