--- a/index.html
+++ b/index.html
@@ -118,6 +118,34 @@
           </li>
         </ul>
       </section>
+
+      <section>
+        <h2> Our Portfolio </h2>
+          <img src="./images/Banking App.jpg" alt="Banking App" width="360" height="300">
+            <h3>Banking App</h3>
+            <p>App</p>
+          </img>
+          <img src="./images/Cashless Payment.jpg" alt="Cashless Payment" width="360" height="300">
+            <h3>Cashless Payment</h3>
+            <p>Marketing</p>
+          </img>
+          <img src="./images/Meditation App.jpg" alt="Meditation App" width="360" height="300">
+            <h3>Meditation App</h3>
+            <p>App</p>
+          </img>
+          <img src="./images/Taxi Service.jpg" alt="Taxi Service" width="360" height="300">
+            <h3>Taxi Service</h3>
+            <p>Marketing</p>
+          </img>
+          <img src="./images/Screen Illustrations.jpg" alt="Screen Illustrations" width="360" height="300">
+            <h3>Screen Illustrations</h3>
+            <p>Design</p>
+          </img>
+          <img src="./images/Online Courses.jpg" alt="Online Courses" width="360" height="300">
+            <h3>Online Courses</h3>
+            <p>Marketing</p>
+          </img>
+      </section>
     </main>
 
     <footer>
