--- a/index.html
+++ b/index.html
@@ -4,12 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=\, initial-scale=1.0" />
     <title>WebstudioPage</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css" integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="css/styles.css">
   </head>
 
   <body>
-    <header>
+    <header class="head">
       <nav>
-        <a href="./index.html"> WebStudio</a>
+        <a class="logo" href="./index.html"> <span class="logo_iris">Web</span><span class="logo_navy">Studio</span></a>
         <ul>
           <li>
             <a href=""> Studio </a>
@@ -120,40 +126,40 @@
       </section>
 
       <section>
-        <h2> Our Portfolio </h2>
+        <h2>Our Portfolio</h2>
         <ul>
           <li>
-          <img src="./images/Banking App.jpg" alt="Banking App" width="360" height="300">
+          <img src="./images/BankingApp.jpg" alt="Banking App" width="360" height="300">
             <h3>Banking App</h3>
             <p>App</p>
           </li>
           <li>
           </img>
-          <img src="./images/Cashless Payment.jpg" alt="Cashless Payment" width="360" height="300">
+          <img src="./images/CashlessPayment.jpg" alt="Cashless Payment" width="360" height="300">
             <h3>Cashless Payment</h3>
             <p>Marketing</p>
           </img>
         </li>
         <li>
-          <img src="./images/Meditation App.jpg" alt="Meditation App" width="360" height="300">
+          <img src="./images/MeditationApp.jpg" alt="Meditation App" width="360" height="300">
             <h3>Meditation App</h3>
             <p>App</p>
           </img>
         </li>
         <li>
-          <img src="./images/Taxi Service.jpg" alt="Taxi Service" width="360" height="300">
+          <img src="./images/TaxiService.jpg" alt="Taxi Service" width="360" height="300">
             <h3>Taxi Service</h3>
             <p>Marketing</p>
           </img>
         </li>
         <li>
-          <img src="./images/Screen Illustrations.jpg" alt="Screen Illustrations" width="360" height="300">
+          <img src="./images/ScreenIllustrations.jpg" alt="Screen Illustrations" width="360" height="300">
             <h3>Screen Illustrations</h3>
             <p>Design</p>
           </img>
         </li>
         <li>
-          <img src="./images/Online Courses.jpg" alt="Online Courses" width="360" height="300">
+          <img src="./images/OnlineCourses.jpg" alt="Online Courses" width="360" height="300">
             <h3>Online Courses</h3>
             <p>Marketing</p>
           </img>
