--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
 
     <footer class="footer">
       <a class="logo" href="./index.html">
-        <span class="logo_iris">Web</span
-        ><span class="logo_cloud">Studio</span></a
+        <span class="logo_iris">Web</span>
+        <span class="logo_cloud">Studio</span></a
       >
       <p class="text_footer">
         Increase the flow of customers and sales for your business with digital
