--- a/index.html
+++ b/index.html
@@ -23,20 +23,19 @@
 
   <body>
     <header class="head">
-      <a class="logo" href="./index.html">
-        <span class="logo_iris">Web</span
-        ><span class="logo_navy">Studio</span></a
-      >
       <nav class="navigation">
+        <a href="./index.html" class="logo" target="_blank">
+          Web <span class="logo_navy">Studio</span></a
+        >
         <ul class="navigation_list">
-          <li class="navigation_list_item">
-            <a class="navigation_list_item_site" href=""> Studio </a>
+          <li>
+            <a class="link" href="./index.html"> Studio </a>
           </li>
-          <li class="navigation_list_item">
-            <a class=".navigation_list_item_site" href="">Portfolio </a>
+          <li>
+            <a class="link" href="">Portfolio </a>
           </li>
-          <li class="navigation_list_item">
-            <a class=".navigation_list_item_site" href="">Contacts </a>
+          <li>
+            <a class="link" href="">Contacts </a>
           </li>
         </ul>
       </nav>
