--- a/index.html
+++ b/index.html
@@ -24,9 +24,8 @@
   <body>
     <header class="head">
       <nav class="navigation">
-        <a href="./index.html" class="logo" target="_blank">
-          Web <span class="logo_navy">Studio</span></a
-        >
+        <a href="./index.html" class="logo" target="_blank"> Web</a>
+        <span class="logo_navy">Studio</span>
         <ul class="navigation_list">
           <li>
             <a class="link" href="./index.html"> Studio </a>
