--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
   <body>
     <header class="head">
       <nav class="navigation">
-        <a href="./index.html" class="logo" target="_blank"> Web</a>
-        <span class="logo_navy">Studio</span>
+        <a href="./index.html" class="logo" target="_blank">
+          Web <span class="logo_navy">Studio</span>
+        </a>
         <ul class="navigation_list">
           <li>
             <a class="link" href="./index.html"> Studio </a>
@@ -210,8 +211,8 @@
     </main>
 
     <footer class="footer">
-      <a class="logo" href="./index.html">
-        <span class="logo_iris">Web</span>
+      <a href="./index.html" class="logo" target="_blank">
+        Web
         <span class="logo_cloud">Studio</span></a
       >
       <p class="text_footer">
