--- a/index.html
+++ b/index.html
@@ -102,8 +102,8 @@
         </ul>
       </section>
 
-      <section class="team">
-        <h2 class="team_title">Our Team</h2>
+      <section>
+        <h2>Our Team</h2>
         <ul>
           <li>
             <img
