--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </address>
     </header>
 
-    <main class="main_title">
+    <main>
       <section class="main_title_section">
         <h1 class="main_title_section_item">
           Effective Solutions for Your Business
@@ -124,7 +124,7 @@
           <li>
             <img
               src="./images/CamilaGarcia.jpg"
-              alt="Camila Garcia"
+              alt="Camilla Garcia"
               width="264"
             />
             <h3 class="team_name">Camila Garcia</h3>
