--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
         <button class="button" type="button">Order Service</button>
       </section>
 
-      <section class="functions">
-        <ul class="functions_list">
+      <section class="section_1">
+        <ul class="section_1_list">
           <li>
-            <h3 class="functions_list_item">Strategy</h3>
-            <p class="functions_list_item_text">
+            <h3 class="section_1_list_item">Strategy</h3>
+            <p class="section_1_list_item_text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
