--- a/index.html
+++ b/index.html
@@ -59,42 +59,44 @@
     </header>
 
     <main>
-      <section class="main_title_section">
-        <h1 class="main_title_section_item">
-          Effective Solutions for Your Business
-        </h1>
-        <button class="button" type="button">Order Service</button>
+      <section class="section_1">
+        <section class="main_title_section">
+          <h1 class="main_title_section_item">
+            Effective Solutions for Your Business
+          </h1>
+          <button class="button" type="button">Order Service</button>
+        </section>
       </section>
 
-      <section class="section_1">
-        <ul class="section_1_list">
+      <section class="section_2">
+        <ul class="section_2_list">
           <li>
-            <h3 class="section_1_list_item">Strategy</h3>
-            <p class="section_1_list_item_text">
+            <h3 class="section_2_list_item">Strategy</h3>
+            <p class="section_2_list_item_text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
 
           <li>
-            <h3 class="functions_list_item">Punctuality</h3>
-            <p class="functions_list_item_text">
+            <h3 class="section_2_list_item">Punctuality</h3>
+            <p class="section_2_list_item_text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
 
           <li>
-            <h3 class="functions_list_item">Diligence</h3>
-            <p class="functions_list_item_text">
+            <h3 class="section_2_list_item">Diligence</h3>
+            <p class="section_2_list_item_text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
 
           <li>
-            <h3 class="functions_list_item">Technologies</h3>
-            <p class="functions_list_item_text">
+            <h3 class="section_2_list_item">Technologies</h3>
+            <p class="section_2_list_item_text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
