--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@
       </section>
 
       <section class="section_2">
+        <h2 class="section_2_title"></h2>
         <ul class="section_2_list">
           <li>
             <h3 class="section_2_list_item">Strategy</h3>
