--- a/index.html
+++ b/index.html
@@ -103,9 +103,10 @@
         </ul>
       </section>
 
-      <section>
-        <h2>Our Team</h2>
-        <ul>
+      <section class="section_team">
+        <h2 class="team_title"></h2>
+        <h2 class="team_title">Our Team</h2>
+        <ul class="team_title_list">
           <li>
             <img
               src="./images/MarkGuerrero.jpg"
