--- a/index.html
+++ b/index.html
@@ -104,21 +104,22 @@
       </section>
 
       <section class="section_team">
-        <h2 class="team_title">Our Team</h2>
-        <ul class="team_title_list">
+        <h2 class="section_team_title">Our Team</h2>
+        <ul class="section_team_title_list">
           <li>
             <img
+              class=""
               src="./images/MarkGuerrero.jpg"
               alt="Mark Guerrero"
               width="264"
             />
-            <h3 class="team_name">Mark Guerrero</h3>
+            <h3 class="section_2_list_item">Mark Guerrero</h3>
             <p class="team_profession">Product Designer</p>
           </li>
 
           <li>
             <img src="./images/TomFord.jpg" alt="Tom Ford" width="264" />
-            <h3 class="team_name">Tom Ford</h3>
+            <h3 class="section_2_list_item">Tom Ford</h3>
             <p class="team_profession">Frontend Developer</p>
           </li>
 
@@ -128,7 +129,7 @@
               alt="Camilla Garcia"
               width="264"
             />
-            <h3 class="team_name">Camila Garcia</h3>
+            <h3 class="section_2_list_item">Camila Garcia</h3>
             <p class="team_profession">Marketing</p>
           </li>
 
@@ -138,7 +139,7 @@
               alt="Daniel Wilson"
               width="264"
             />
-            <h3 class="team_name">Daniel Wilson</h3>
+            <h3 class="section_2_list_item">Daniel Wilson</h3>
             <p class="team_profession">UI Designer</p>
           </li>
         </ul>
