--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
         <ul class="section_team_title_list">
           <li>
             <img
-              class=""
+              class="section_3"
               src="./images/MarkGuerrero.jpg"
               alt="Mark Guerrero"
               width="264"
@@ -117,13 +117,19 @@
           </li>
 
           <li>
-            <img src="./images/TomFord.jpg" alt="Tom Ford" width="264" />
+            <img
+              class="section_3"
+              src="./images/TomFord.jpg"
+              alt="Tom Ford"
+              width="264"
+            />
             <h3 class="section_2_list_item">Tom Ford</h3>
             <p class="team_profession">Frontend Developer</p>
           </li>
 
           <li>
             <img
+              class="section_3"
               src="./images/CamilaGarcia.jpg"
               alt="Camilla Garcia"
               width="264"
@@ -134,6 +140,7 @@
 
           <li>
             <img
+              class="section_3"
               src="./images/DanielWilson.jpg"
               alt="Daniel Wilson"
               width="264"
