--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <h2 class="section_2_title"></h2>
         <ul class="section_2_list">
           <li>
-            <h3 class="section_2_list_item">Strategy</h3>
+            <h3 class="section_2_title">Strategy</h3>
             <p class="section_2_list_item_text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
@@ -78,7 +78,7 @@
           </li>
 
           <li>
-            <h3 class="section_2_list_item">Punctuality</h3>
+            <h3 class="section_2_title">Punctuality</h3>
             <p class="section_2_list_item_text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
@@ -86,7 +86,7 @@
           </li>
 
           <li>
-            <h3 class="section_2_list_item">Diligence</h3>
+            <h3 class="section_2_title">Diligence</h3>
             <p class="section_2_list_item_text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
@@ -94,7 +94,7 @@
           </li>
 
           <li>
-            <h3 class="section_2_list_item">Technologies</h3>
+            <h3 class="section_2_title">Technologies</h3>
             <p class="section_2_list_item_text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
