--- a/index.html
+++ b/index.html
@@ -66,11 +66,13 @@
         <button class="button" type="button">Order Service</button>
       </section>
 
+      <!--section2-->
+
       <section class="section_2">
-        <h2 class="section_2_title"></h2>
+        <h2 class=".section_2_title"></h2>
         <ul class="section_2_list">
           <li>
-            <h3 class="section_2_title">Strategy</h3>
+            <h3 class="section_2_list_item">Strategy</h3>
             <p class="section_2_list_item_text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
@@ -78,7 +80,7 @@
           </li>
 
           <li>
-            <h3 class="section_2_title">Punctuality</h3>
+            <h3 class="section_2_list_item">Punctuality</h3>
             <p class="section_2_list_item_text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
@@ -86,7 +88,7 @@
           </li>
 
           <li>
-            <h3 class="section_2_title">Diligence</h3>
+            <h3 class="section_2_list_item">Diligence</h3>
             <p class="section_2_list_item_text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
@@ -94,7 +96,7 @@
           </li>
 
           <li>
-            <h3 class="section_2_title">Technologies</h3>
+            <h3 class="section_2_list_item">Technologies</h3>
             <p class="section_2_list_item_text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
@@ -103,49 +105,47 @@
         </ul>
       </section>
 
+      <!--section3-->
+
       <section class="section_team">
         <h2 class="section_team_title">Our Team</h2>
         <ul class="section_team_title_list">
           <li>
             <img
-              class="section_3"
               src="./images/MarkGuerrero.jpg"
               alt="Mark Guerrero"
               width="264"
             />
+            <h2 class="background"></h2>
             <h3 class="section_2_list_item">Mark Guerrero</h3>
             <p class="team_profession">Product Designer</p>
           </li>
 
           <li>
-            <img
-              class="section_3"
-              src="./images/TomFord.jpg"
-              alt="Tom Ford"
-              width="264"
-            />
+            <img src="./images/TomFord.jpg" alt="Tom Ford" width="264" />
+            <h2 class="background"></h2>
             <h3 class="section_2_list_item">Tom Ford</h3>
             <p class="team_profession">Frontend Developer</p>
           </li>
 
           <li>
             <img
-              class="section_3"
               src="./images/CamilaGarcia.jpg"
               alt="Camilla Garcia"
               width="264"
             />
+            <h2 class="background"></h2>
             <h3 class="section_2_list_item">Camila Garcia</h3>
             <p class="team_profession">Marketing</p>
           </li>
 
           <li>
             <img
-              class="section_3"
               src="./images/DanielWilson.jpg"
               alt="Daniel Wilson"
               width="264"
             />
+            <h2 class="background"></h2>
             <h3 class="section_2_list_item">Daniel Wilson</h3>
             <p class="team_profession">UI Designer</p>
           </li>
