--- a/index.html
+++ b/index.html
@@ -116,14 +116,14 @@
               alt="Mark Guerrero"
               width="264"
             />
-            <h2 class="background"></h2>
+
             <h3 class="section_2_list_item">Mark Guerrero</h3>
             <p class="team_profession">Product Designer</p>
           </li>
 
           <li>
             <img src="./images/TomFord.jpg" alt="Tom Ford" width="264" />
-            <h2 class="background"></h2>
+
             <h3 class="section_2_list_item">Tom Ford</h3>
             <p class="team_profession">Frontend Developer</p>
           </li>
@@ -134,7 +134,7 @@
               alt="Camilla Garcia"
               width="264"
             />
-            <h2 class="background"></h2>
+
             <h3 class="section_2_list_item">Camila Garcia</h3>
             <p class="team_profession">Marketing</p>
           </li>
@@ -145,12 +145,14 @@
               alt="Daniel Wilson"
               width="264"
             />
-            <h2 class="background"></h2>
+
             <h3 class="section_2_list_item">Daniel Wilson</h3>
-            <p class="team_profession">UI Designer</p>
+            <p class="team_profession">UI Desgner</p>
           </li>
         </ul>
       </section>
+
+      <!--section 4-->
 
       <section class="portfolio">
         <h2 class="portfolio_title">Our Portfolio</h2>
