--- a/index.html
+++ b/index.html
@@ -105,54 +105,54 @@
         </ul>
       </section>
 
-      <!--section3-->
-
       <section class="section_team">
         <h2 class="section_team_title">Our Team</h2>
         <ul class="section_team_title_list">
           <li>
             <img
+              class="section_3"
               src="./images/MarkGuerrero.jpg"
               alt="Mark Guerrero"
               width="264"
             />
-
             <h3 class="section_2_list_item">Mark Guerrero</h3>
             <p class="team_profession">Product Designer</p>
           </li>
 
           <li>
-            <img src="./images/TomFord.jpg" alt="Tom Ford" width="264" />
-
+            <img
+              class="section_3"
+              src="./images/TomFord.jpg"
+              alt="Tom Ford"
+              width="264"
+            />
             <h3 class="section_2_list_item">Tom Ford</h3>
             <p class="team_profession">Frontend Developer</p>
           </li>
 
           <li>
             <img
+              class="section_3"
               src="./images/CamilaGarcia.jpg"
               alt="Camilla Garcia"
               width="264"
             />
-
             <h3 class="section_2_list_item">Camila Garcia</h3>
             <p class="team_profession">Marketing</p>
           </li>
 
           <li>
             <img
+              class="section_3"
               src="./images/DanielWilson.jpg"
               alt="Daniel Wilson"
               width="264"
             />
-
             <h3 class="section_2_list_item">Daniel Wilson</h3>
-            <p class="team_profession">UI Desgner</p>
+            <p class="team_profession">UI Designer</p>
           </li>
         </ul>
       </section>
-
-      <!--section 4-->
 
       <section class="portfolio">
         <h2 class="portfolio_title">Our Portfolio</h2>
