--- a/index.html
+++ b/index.html
@@ -68,36 +68,36 @@
 
       <!--section2-->
 
-      <section class="section_2">
-        <h2 class=".section_2_title"></h2>
-        <ul class="section_2_list">
+      <section class="section_two">
+        <h2 class=".section_title"></h2>
+        <ul class="section_list">
           <li>
-            <h3 class="section_2_list_item">Strategy</h3>
-            <p class="section_2_list_item_text">
+            <h3 class="section_list_item">Strategy</h3>
+            <p class="section_list_item_text">
               Our goal is to identify the business problem to walk away with the
               perfect and creative solution.
             </p>
           </li>
 
           <li>
-            <h3 class="section_2_list_item">Punctuality</h3>
-            <p class="section_2_list_item_text">
+            <h3 class="section_list_item">Punctuality</h3>
+            <p class="section_list_item_text">
               Bring the key message to the brand's audience for the best price
               within the shortest possible time.
             </p>
           </li>
 
           <li>
-            <h3 class="section_2_list_item">Diligence</h3>
-            <p class="section_2_list_item_text">
+            <h3 class="section_list_item">Diligence</h3>
+            <p class="section_list_item_text">
               Research and confirm brands that present the strongest digital
               growth opportunities and minimize risk.
             </p>
           </li>
 
           <li>
-            <h3 class="section_2_list_item">Technologies</h3>
-            <p class="section_2_list_item_text">
+            <h3 class="section_list_item">Technologies</h3>
+            <p class="section_list_item_text">
               Design practice focused on digital experiences. We bring forth a
               deep passion for problem-solving.
             </p>
@@ -110,45 +110,45 @@
         <ul class="section_team_title_list">
           <li>
             <img
-              class="section_3"
+              class="section_three"
               src="./images/MarkGuerrero.jpg"
               alt="Mark Guerrero"
               width="264"
             />
-            <h3 class="section_2_list_item">Mark Guerrero</h3>
+            <h3 class="section_list_item">Mark Guerrero</h3>
             <p class="team_profession">Product Designer</p>
           </li>
 
           <li>
             <img
-              class="section_3"
+              class="section_three"
               src="./images/TomFord.jpg"
               alt="Tom Ford"
               width="264"
             />
-            <h3 class="section_2_list_item">Tom Ford</h3>
+            <h3 class="section_list_item">Tom Ford</h3>
             <p class="team_profession">Frontend Developer</p>
           </li>
 
           <li>
             <img
-              class="section_3"
+              class="section_three"
               src="./images/CamilaGarcia.jpg"
               alt="Camilla Garcia"
               width="264"
             />
-            <h3 class="section_2_list_item">Camila Garcia</h3>
+            <h3 class="section_list_item">Camila Garcia</h3>
             <p class="team_profession">Marketing</p>
           </li>
 
           <li>
             <img
-              class="section_3"
+              class="section_three"
               src="./images/DanielWilson.jpg"
               alt="Daniel Wilson"
               width="264"
             />
-            <h3 class="section_2_list_item">Daniel Wilson</h3>
+            <h3 class="section_list_item">Daniel Wilson</h3>
             <p class="team_profession">UI Designer</p>
           </li>
         </ul>
