--- a/index.html
+++ b/index.html
@@ -108,9 +108,8 @@
       <section class="section_team">
         <h2 class="section_team_title">Our Team</h2>
         <ul class="section_team_title_list">
-          <li>
+          <li class="section-three">
             <img
-              class="section_three"
               src="./images/MarkGuerrero.jpg"
               alt="Mark Guerrero"
               width="264"
@@ -119,20 +118,14 @@
             <p class="team_profession">Product Designer</p>
           </li>
 
-          <li>
-            <img
-              class="section_three"
-              src="./images/TomFord.jpg"
-              alt="Tom Ford"
-              width="264"
-            />
+          <li class="section-three">
+            <img src="./images/TomFord.jpg" alt="Tom Ford" width="264" />
             <h3 class="section_list_item">Tom Ford</h3>
             <p class="team_profession">Frontend Developer</p>
           </li>
 
-          <li>
+          <li class="section-three">
             <img
-              class="section_three"
               src="./images/CamilaGarcia.jpg"
               alt="Camilla Garcia"
               width="264"
@@ -141,9 +134,8 @@
             <p class="team_profession">Marketing</p>
           </li>
 
-          <li>
+          <li class="section-three">
             <img
-              class="section_three"
               src="./images/DanielWilson.jpg"
               alt="Daniel Wilson"
               width="264"
